--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
     "joi": "^17.6.0",
     "mongodb": "^4.3.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "eslint": "^8.8.0"
   }
 }
