--- a/backend/package.json
+++ b/backend/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon ./src/api/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Wellington Gregorio",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-rescue": "^1.1.31",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "nodemon": "^2.0.15"
   },
